:bug: fix(contactUs): add spacing under input fields to prevent content to jump when error message displays

--- a/src/scss/components/_contactUs.scss
+++ b/src/scss/components/_contactUs.scss
@@ -38,7 +38,8 @@
 
             .input_message {
                 color: $red-color;
-                margin: 0 0 15px 0;
+                min-height: 1.2rem;
+                margin: 0 0 5px 0;
             }
         }
 
